# iprovider

./: CMakeLists.txt  GEMINI.md  README.md  build.bat  exportsinfo.txt
include/: api_exports.h  compress_engine.h  math_engine.h  miniz.h  perf_engine.h  socwatch_engine.h  upload_engine.h
src/: api_exports.cpp  compress_engine.cpp  iprovider_main.cpp  math_engine.cpp  miniz.c  perf_engine.cpp  socwatch_engine.cpp  upload_engine.cpp
tests/: test_api.cpp
